# YOLOX-901

./: yolox-l.txt
demo/TensorRT/cpp/: CMakeLists.txt  yolox-320x640.cpp
demo/TensorRT/python/: README.md
demo/ncnn/cpp/: CMakeLists.txt  README.md  yolox-pnnx.cpp
exps/example/bdd100k/: bdd_base.py  bdd_l.py  bdd_s.py
exps/example/custom/: yolox_l-320x640.py  yolox_s-320x640.py  yolox_s-relu-int8.py
tools/: demo.py  eval.py  export_onnx.py  export_torchscript.py  torch-int8.py  trt-int8.py
yolox/data/datasets/: __init__.py  bdd100k_coco.py
